@@ -1,64 +1,38 @@
 package orgaplan.beratung.kreditunterlagen.controller;
 
-import jakarta.mail.MessagingException;
+import jakarta.validation.Valid;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
-import orgaplan.beratung.kreditunterlagen.model.Kreditvermittler;
 import orgaplan.beratung.kreditunterlagen.model.User;
-import orgaplan.beratung.kreditunterlagen.request.CreateNewClientRequest;
-import orgaplan.beratung.kreditunterlagen.response.UserDetail;
-import orgaplan.beratung.kreditunterlagen.service.EmailService;
-import orgaplan.beratung.kreditunterlagen.service.KreditvermittlerService;
+import orgaplan.beratung.kreditunterlagen.request.CreateUserRequest;
+import orgaplan.beratung.kreditunterlagen.request.LoginRequest;
 import orgaplan.beratung.kreditunterlagen.service.UserService;
-import orgaplan.beratung.kreditunterlagen.util.Util;
 
-import java.math.BigDecimal;
-import java.security.Principal;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
 @RestController
 @RequestMapping("/api/users")
 public class UserController {
+
     @Autowired
     private UserService userService;
 
-    @Autowired
-    private EmailService emailService;
-
-    @Autowired
-    private KreditvermittlerService kreditvermittlerService;
-
-    @GetMapping("/test")
-    public ResponseEntity<String> sayHello() {
-        System.out.println("authentication");
-        return ResponseEntity.ok("Hello");
-    }
-
-    @PostMapping("/createNewClient")
-    public ResponseEntity<Map<String, Object>> createNewClient(@RequestBody CreateNewClientRequest request) {
+    @PostMapping("/create")
+    public ResponseEntity<Map<String, Object>> createUser(@Valid @RequestBody CreateUserRequest request) {
         if (userService.existsByEmail(request.getEmail())) {
             throw new IllegalArgumentException("Ein Benutzer mit dieser E-Mail existiert bereits");
         }
 
-        String startPassword = Util.generateStartPassword();
-        User newClient = userService.createNewClient(request);
-        Map<String, Object> response = new HashMap<>();
-        response.put("user", newClient);
+        User user = userService.createUser(request);
+        return ResponseEntity.ok(Map.of("user", user));
+    }
 
-        // 3. Step: Mail with "Nutzername" = E-Mail and "Startpasswort"
-        String email = request.getEmail();
-        try {
-            emailService.sendWelcomeEmail(email,startPassword);
-            return ResponseEntity.status(HttpStatus.CREATED).body(response);
-        } catch (MessagingException e) {
-            e.printStackTrace();
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(Collections.singletonMap("error", "Failed to send email."));
-        }
+    @PostMapping("/login")
+    public ResponseEntity<?> login(@Valid @RequestBody LoginRequest request) {
+        User user = userService.login(request.getEmail(), request.getPassword());
+        return ResponseEntity.ok(Map.of("user", user));
     }
 
     @GetMapping
@@ -66,40 +40,15 @@ public class UserController {
         return userService.getUsers();
     }
 
-    @GetMapping("/getUser")
-    public ResponseEntity<UserDetail> getUserById() {
-        boolean isKreditvermittler = false;
-        String userId = "be86ad97-d2f5-4ea0-9576-aca58ee1d51d";
-
-        UserDetail userDetail;
-        if (isKreditvermittler) {
-            Kreditvermittler kreditvermittler = userService.findKreditvermittlerById(userId);
-            userDetail = userService.convertKreditvermittlerToUserDetail(kreditvermittler);
-        } else {
-            userDetail = userService.getUserById(userId);
-        }
-
-        return ResponseEntity.ok(userDetail);
+    @GetMapping("/{id}")
+    public ResponseEntity<User> getUserById(@PathVariable String id) {
+        User user = userService.findUserById(id);
+        return ResponseEntity.ok(user);
     }
 
-    @PutMapping("/savePercentageUploaded")
-    public ResponseEntity<Object> savePercentageUploaded(Principal principal, @RequestParam BigDecimal percentageUploaded) {
-        String userId = "be86ad97-d2f5-4ea0-9576-aca58ee1d51d";
-        userService.updateUploadPercentage(userId, percentageUploaded);
-        return ResponseEntity.ok().body("Percentage updated successfully");
-    }
-
-    @PutMapping("/activeSecondPartner")
-    public ResponseEntity<Object> activeSecondPartner(Principal principal, @RequestParam boolean activeSecondPartner) {
-        String userId = "be86ad97-d2f5-4ea0-9576-aca58ee1d51d";
-        userService.updateSecondPartner(userId, activeSecondPartner);
-        return ResponseEntity.ok().body("Zweiter Partner erfolgreich aktualisiert");
-    }
-
-    @PutMapping("/editUser")
-    public ResponseEntity<User> editUser(@RequestBody User updatedUserFields) {
-        String userId = "be86ad97-d2f5-4ea0-9576-aca58ee1d51d";
-        User updatedUser = userService.editUser(userId, updatedUserFields);
+    @PutMapping("/{id}")
+    public ResponseEntity<User> updateUser(@PathVariable String id, @RequestBody CreateUserRequest request) {
+        User updatedUser = userService.updateUser(id, request);
         return ResponseEntity.ok(updatedUser);
     }
 }
